@@ -1,3 +1,42 @@
+wglinks_test1:
+    options: 'ENGINE=InnoDB'
+    columns: 
+        -
+            name: cat_id
+            attributes: ' INT(8) UNSIGNED NOT NULL AUTO_INCREMENT '
+        -
+            name: cat_name
+            attributes: ' VARCHAR(100) NOT NULL DEFAULT '''''''' '
+    keys:
+        PRIMARY:
+            columns: cat_id
+            unique: true
+wglinks_test2:
+    options: 'ENGINE=InnoDB'
+    columns: 
+        -
+            name: cat_id
+            attributes: ' INT(8) UNSIGNED NOT NULL AUTO_INCREMENT '
+        -
+            name: cat_name
+            attributes: ' VARCHAR(100) NOT NULL DEFAULT '''''''' '
+    keys:
+        PRIMARY:
+            columns: cat_id
+            unique: true
+wglinks_test3:
+    options: 'ENGINE=InnoDB Default charset utf8'
+    columns: 
+        -
+            name: cat_id
+            attributes: ' INT(8) UNSIGNED NOT NULL AUTO_INCREMENT '
+        -
+            name: cat_name
+            attributes: ' VARCHAR(100) NOT NULL DEFAULT '''''''' '
+    keys:
+        PRIMARY:
+            columns: cat_id
+            unique: true
 wglinks_categories:
     options: 'ENGINE=InnoDB'
     columns: 
